--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
-DATABASE_URL=postgresql://user:password@localhost/dbname
-SECRET_KEY=bahbah
+DATABASE_URL=postgresql://postgres:123456@localhost:5432/teste_sql
 DEBUG=True
